# quickstart-ml-blueprints

./: .dockerignore  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  Dockerfile_hm  Makefile  README.md  environment.yml  pyproject.toml
autoregressive-time-series-forecasting/: .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml
autoregressive-time-series-forecasting/.devcontainer/: devcontainer.json
autoregressive-time-series-forecasting/conf/base/: catalog.yml  logging.yml  mlflow.yml
autoregressive-time-series-forecasting/conf/base/parameters/: cross_validation.yml  data_processing.yml  forecasting.yml  forecasting_with_exogenous_vars.yml
autoregressive-time-series-forecasting/notebooks/: example.ipynb
autoregressive-time-series-forecasting/src/autoregressive_forecasting/: __init__.py  __main__.py  pipeline_registry.py  settings.py
autoregressive-time-series-forecasting/src/autoregressive_forecasting/helpers/: utils.py
autoregressive-time-series-forecasting/src/tests/: conftest.py  test_run.py
autoregressive-time-series-forecasting/src/tests/helpers/: test_utils.py
ga4-mlops/: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  Untitled.ipynb  pyproject.toml
ga4-mlops/.devcontainer/: devcontainer.json  setup.sh
ga4-mlops/conf/base/: catalog.yml  mlflow.yml
ga4-mlops/conf/base/parameters/: data_preprocessing.yml  explanation.yml  feature_engineering.yml  prediction.yml  training.yml
ga4-mlops/docs/source/: index.rst
ga4-mlops/notebooks/: calibration.ipynb  explanation.ipynb  feature_engineering.ipynb  test_data_samples.ipynb
ga4-mlops/src/: requirements.txt  setup.py
ga4-mlops/src/ga4_mlops/: __init__.py  __main__.py  pipeline_registry.py  settings.py
ga4-mlops/src/ga4_mlops/pipelines/: data_preparation_utils.py  modeling_utils.py
ga4-mlops/src/tests/: test_run.py
ga4-mlops/src/tests/pipelines/: conftest.py  test_data_preparation_utils.py
ga4_mlops/: pyproject.toml
ga4_mlops/conf/base/: logging.yml
ga4_mlops/docs/source/: conf.py
ga4_mlops/src/tests/: test_run.py
llm-reading-assistant/: .gitignore  Dockerfile  README.md  pyproject.toml
llm-reading-assistant/.devcontainer/: devcontainer.json
llm-reading-assistant/conf/base/: catalog.yml  logging.yml  mlflow.yml  parameters.yml
llm-reading-assistant/conf/base/parameters/: run_assistant.yml
llm-reading-assistant/notebooks/: example.ipynb  openai_api_eperiments.ipynb  vertexai_experiments.ipynb
llm-reading-assistant/src/: run_app.py
llm-reading-assistant/src/llm_reading_assistant/: __init__.py  __main__.py  pipeline_registry.py  settings.py
llm-reading-assistant/src/tests/: test_run.py
recommender_gnn/: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  environment.yml  pyproject.toml  virtual-packages.yml
recommender_gnn/.devcontainer/: devcontainer.json  setup.sh
recommender_gnn/conf/base/: catalog.yml  logging.yml  mlflow.yml  vertexai.yml
recommender_gnn/conf/base/hm/: catalog.yml
recommender_gnn/conf/base/otto/: catalog.yml
recommender_gnn/conf/base/parameters/: graph_recommendation.yml  graph_recommendation_modeling.yml  graph_recommendation_preprocessing.yml  kaggle_submission.yml  otto_preprocessing.yml  test_gpu.yml
recommender_gnn/conf/base/santander/: catalog.yml
recommender_gnn/conf/cloud/: catalog.yml  mlflow.yml
recommender_gnn/conf/cloud/hm/: catalog.yml
recommender_gnn/conf/cloud/otto/: catalog.yml
recommender_gnn/conf/cloud/parameters/: graph_recommendation.yml  kaggle_submission.yml  otto_to_act.yml  santander_preprocessing.yml
recommender_gnn/conf/cloud/santander/: catalog.yml
recommender_gnn/notebooks/: graph_preprocessing.ipynb  graph_recommendation.ipynb  otto_data_converting.ipynb  otto_preprocessing.ipynb  santander_data_preprocessing.ipynb  santander_preprocessing.ipynb  santander_to_act.ipynb  saving_to_gcs.ipynb
recommender_gnn/src/: setup.py
recommender_gnn/src/gid_ml_framework/: pipeline_registry.py  settings.py
recommender_gnn/src/recommender_gnn/: __init__.py  __main__.py  hooks.py  pipeline_registry.py  settings.py
recommender_gnn/src/tests/: conftest.py  test_run.py
recommender_ranking/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
recommender_ranking/.devcontainer/: devcontainer.json  setup.sh
recommender_ranking/conf/base/: catalog.yml  logging.yml  vertexai.yml
recommender_ranking/conf/base/parameters/: candidate_generation_validation.yml  feature_engineering_automated.yml  image_embeddings.yml  image_embeddings_inference.yml  merge_candidate_features.yml  ranking.yml  recommendation_generation.yml  sample_data.yml  train_val_split.yml
recommender_ranking/conf/cloud/: catalog.yml  mlflow.yml
recommender_ranking/conf/cloud/parameters/: candidate_generation.yml  image_embeddings.yml  image_embeddings_inference.yml  ranking.yml  recommendation_generation.yml  sample_data.yml  text_embeddings.yml
recommender_ranking/conf/test_sample_cloud/: catalog.yml  mlflow.yml
recommender_ranking/conf/test_sample_cloud/parameters/: candidates_feature_engineering.yml  exploratory_data_analysis.yml  feature_engineering_manual.yml  feature_selection.yml  image_embeddings.yml  image_embeddings_inference.yml  image_resizer.yml  (+5 more)
recommender_ranking/conf/test_sample_local/: catalog.yml  mlflow.yml
recommender_ranking/docs/source/: index.rst
recommender_ranking/notebooks/: candidate_generation.ipynb  candidate_generation_recall.ipynb  feature_engineering_featuretools.ipynb  helper_unpack_images_multiple_folders_into_one.ipynb  manual_feature_engineering.ipynb  manual_feature_engineering_faster_code.ipynb  miscellaneous.ipynb  pytorch_lightning_embeddings-Copy1.ipynb  pytorch_lightning_embeddings-Copy2.ipynb  pytorch_lightning_embeddings.ipynb  ranking.ipynb  ranking_sample.ipynb  sample_hm_data.ipynb  text_embeddings.ipynb  visualize_embeddings.ipynb
recommender_ranking/src/gid_ml_framework/: __main__.py  hooks.py  pipeline_registry.py  settings.py
recommender_ranking/src/tests/: test_run.py
(+439 files in other folders)
