[tool.kedro]
package_name = "ga4_mlops"
project_name = "ga4_mlops"
project_version = "0.18.4"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = """
--cov-report term-missing \
--cov src/ga4_mlops -ra"""

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = ["pragma: no cover", "raise NotImplementedError"]

[tool.poetry]
name = "ga4-mlops"
version = "0.1.0"
description = ""
authors = ["piotr.chaberski <piotr.chaberski@getindata.com>"]

[tool.poetry.dependencies]
python = "3.8.12"
kedro = {version = "0.18.4", extras = ["pandas.GBQQueryDataset"]}
pandas = "1.5.2"
scikit-learn = "^1.2.0"
cmake = "^3.25.0"
xgboost = "^1.7.2"
category-encoders = "^2.5.1.post0"
kedro-mlflow = "^0.11.5"
optuna = "^3.0.5"
shap = "^0.41.0"
matplotlib = "^3.6.3"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"

[tool.poetry.dev-dependencies]
jupyterlab = "^3.5.1"
pytest = "^7.2.1"
kedro-viz = "^5.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
