[tool.kedro]
package_name = "ga4_mlops"
project_name = "ga4_mlops"
project_version = "0.18.3"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = """
--cov-report term-missing \
--cov src/ga4_mlops -ra"""

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = ["pragma: no cover", "raise NotImplementedError"]

[tool.poetry]
name = "ga4-mlops"
version = "0.1.0"
description = ""
authors = ["piotr.chaberski <piotr.chaberski@getindata.com>"]

[tool.poetry.dependencies]
python = "3.8.12"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
