[tool.kedro]
package_name = "recommender_gnn"
project_name = "GetInData ML Framework"
project_version = "0.18.2"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
known_third_party = "kedro"

[tool.pytest.ini_options]
addopts = """
--cov-report term-missing \
--cov src/recommender_gnn -ra"""
pythonpath = [
  ".", "src",
]

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = ["pragma: no cover", "raise NotImplementedError"]

[tool.poetry]
name = "recommender-gnn"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "3.8.12"
kedro = {version = "0.18.2", extras = ["pandas.ExcelDataSet", "pandas.ParquetDataSet", "pandas.CSVDataSet"]}
kedro-mlflow = "0.11.2"
kedro-telemetry = "0.2.1"
scikit-learn = "~=1.0"
pytorch-lightning = "1.6.5"
pip = "^22.1.2"
kedro-vertexai = "0.7.0"
kedro-docker = "0.3.0"
google-cloud-aiplatform = "1.15.0"
pathy = "^0.6.2"
jupyter = "^1.0.0"
torch = "1.12.1"
torchaudio = "0.12.1"
torchvision = "0.13.1"

[tool.poetry.dev-dependencies]
black = "21.5b1"
flake8 = "^3.7.9"
ipython = "^7.31.1"
isort = "~=5.0"
jupyter = "~=1.0"
jupyter-client = ">=5.1,<7.0"
jupyterlab = "~=3.0"
kedro-viz = "5.0.1"
nbstripout = "~=0.4"
pytest = "^7.2.0"
pytest-cov = "~=3.0"
pytest-mock = "^1.7.1"
scikit-learn = "~=1.0"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
